Add classes for Skills section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="about__aside basis-1/4">
                     <img class="mx-auto" src="./images/portrait.png" alt="Portrait" width="200" height="200">
-                    <ul class="p-4 bg-gray-200">
+                    <ul class="p-4 bg-gray-300">
                         <li>Occupation</li>
                         <li>Location</li>
                         <li>Something else</li>
@@ -83,24 +83,24 @@
                 </div>
             </div>
         </section>
-        <section class="mb-6" id="skills">
-            <div class="wrapper skills">
-                <h2 class="text-3xl text-gray-800 font-semibold mb-2">Skills</h2>
-                <ul class="skills__list">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>Markdown</li>
-                    <li>Agile</li>
-                    <li>Tailwind CSS</li>
-                    <li>Skill #009</li>
-                    <li>Skill #010</li>
-                    <li>Skill #011</li>
-                    <li>Skill #012</li>
-                </ul>
-            </div>
+        <section class="mb-6 p-4 bg-gray-800" id="skills">
+            <h2 class="text-violet-100 text-3xl font-semibold mb-4">
+                Skills
+            </h2>
+            <ul class="grid gap-4 sm:grid-cols-2 md:grid-cols-4">
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">HTML</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">CSS</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">JavaScript</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">Git</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">GitHub</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">Markdown</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">Agile</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">Tailwind CSS</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">Skill #009</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">Skill #010</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">Skill #011</li>
+                <li class="py-2 px-4 mx-auto w-fit bg-gray-200 rounded-md">Skill #012</li>
+            </ul>
         </section>
         <section class="mb-8" id="portfolio">
             <h2 class="text-3xl text-gray-800 font-semibold mb-2">My projects</h2>
