--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Nikolay Kolomyytsev — portfolic</title>
 </head>
 
-<body class="antialiased">
+<body class="antialiased scroll-smooth">
     <nav class="header__top sticky top-0 flex flex-wrap gap-4 justify-between items-baseline px-4 py-2 bg-gray-200">
         <a href="#" class="hover:text-violet-700 transition p-2">To
             top</a>
@@ -128,21 +128,22 @@
             </ul>
         </section>
     </main>
-    <footer class="footer">
-
-        <h2 id="contacts">My contacts</h2>
-        <h3>Nikolay Kolomyytsev</h3>
-        <address>
-            <p><b>Phone: </b>xxx</p>
-            <p><b>E-mail: </b>xxx</p>
-            <p><b>Post: </b>xxx</p>
-        </address>
-        <ul class="footer__links">
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">TikTok</a></li>
-        </ul>
-        <div class="footer__copyright">
+    <footer id="contacts" class="text-violet-100 bg-gray-800">
+        <h2 class="p-4 text-3xl font-semibold">My contacts</h2>
+        <div class="p-4 flex gap-16 flex-wrap justify-between items-baseline">
+            <address class="not-italic">
+                <h3 class="text-2xl">Nikolay Kolomyytsev</h3>
+                <p><b>Phone: </b>+49 (30) 222 333 222</p>
+                <p><b>E-mail: </b>james.bond@mi6.gov.uk</p>
+                <p><b>Post: </b>85 Albert Embankment,<br>Vauxhall, Lambeth</p>
+            </address>
+            <ul class="footer__links">
+                <li><a href="#" class="inline-block py-2 px-4 mb-2 text-gray-900 mx-auto w-fit bg-gray-300 rounded-md transition hover:text-violet-800 hover:bg-white">LinkedIn</a></li>
+                <li><a href="#" class="inline-block py-2 px-4 mb-2 text-gray-900 mx-auto w-fit bg-gray-300 rounded-md transition hover:text-violet-800 hover:bg-white">GitHub</a></li>
+                <li><a href="#" class="inline-block py-2 px-4 mb-2 text-gray-900 mx-auto w-fit bg-gray-300 rounded-md transition hover:text-violet-800 hover:bg-white">TikTok</a></li>
+            </ul>
+        </div>
+        <div class="p-4 text-violet-100 text-end bg-gray-900">
             Copyright © 2024 Nikolay Kolomyytsev
         </div>
     </footer>
